devise + simple_form

--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -1,26 +1,27 @@
 <%= render PageComponent.new(title: t("devise.invitations.edit.header"), full_width: false) do %>
-  <%= form_with model: resource, as: resource_name, url: invitation_path(resource_name), method: :put, class: "space-y-4" do |f| %>
+  <%= simple_form_for resource, as: resource_name, url: invitation_path(resource_name), method: :put, html: { class: "space-y-4" } do |f| %>
     <%= render "shared/errors", object: resource %>
     <%= f.hidden_field :invitation_token, readonly: true %>
 
-    <div class="space-y-1">
-      <%= f.label :email, class: "block text-sm font-medium" %>
-      <%= f.email_field :email, class: "input w-full", disabled: true %>
-    </div>
+    <%= f.input :email,
+                 input_html: {
+                   disabled: true
+                 } %>
 
     <% if f.object.class.require_password_on_accepting %>
-      <div class="space-y-1">
-        <%= f.label :password, class: "block text-sm font-medium" %>
-        <%= f.password_field :password, class: "input w-full", autocomplete: "new-password" %>
-      </div>
-      <div class="space-y-1">
-        <%= f.label :password_confirmation, class: "block text-sm font-medium" %>
-        <%= f.password_field :password_confirmation, class: "input w-full", autocomplete: "new-password" %>
-      </div>
+      <%= f.input :password,
+                   input_html: {
+                     autocomplete: "new-password"
+                   } %>
+
+      <%= f.input :password_confirmation,
+                   input_html: {
+                     autocomplete: "new-password"
+                   } %>
     <% end %>
 
     <div class="pt-2">
-      <%= f.submit t("devise.invitations.edit.submit_button"), class: "btn btn-primary btn-block" %>
+      <%= f.button :submit, t("devise.invitations.edit.submit_button"), class: "btn-primary btn-block" %>
     </div>
   <% end %>
 <% end %>
