--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,19 +1,21 @@
 <%= render PageComponent.new(title: t("devise.views.confirmations.new.title"), full_width: false) do %>
   <%= render "devise/shared/oauth_links" %>
 
-  <%= form_with model: resource, as: resource_name, url: confirmation_path(resource_name), method: :post, class: "space-y-4" do |f| %>
+  <%= simple_form_for resource, as: resource_name, url: confirmation_path(resource_name), method: :post, html: { class: "space-y-4" } do |f| %>
     <%= render "shared/errors", object: resource %>
 
-    <div class="space-y-1">
-      <%= f.label :email, t("devise.views.confirmations.new.email_label"), class: "block text-sm font-medium" %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "input w-full", placeholder: t("devise.views.confirmations.new.email_placeholder") %>
-      <p class="text-xs">
-        <%= t("devise.views.confirmations.new.email_help") %>
-      </p>
-    </div>
+    <%= f.input :email,
+                 label: t("devise.views.confirmations.new.email_label"),
+                 placeholder: t("devise.views.confirmations.new.email_placeholder"),
+                 hint: t("devise.views.confirmations.new.email_help"),
+                 input_html: {
+                   autofocus: true,
+                   autocomplete: "email",
+                   value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email)
+                 } %>
 
     <div class="pt-2">
-      <%= f.submit t("devise.views.confirmations.new.submit"), class: "btn btn-primary btn-block" %>
+      <%= f.button :submit, t("devise.views.confirmations.new.submit"), class: "btn-primary btn-block" %>
     </div>
   <% end %>
 
