--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -1,16 +1,16 @@
 <%= render PageComponent.new(title: t("devise.invitations.new.header"), full_width: false) do %>
-  <%= form_with model: resource, as: resource_name, url: invitation_path(resource_name), method: :post, class: "space-y-4" do |f| %>
+  <%= simple_form_for resource, as: resource_name, url: invitation_path(resource_name), method: :post, html: { class: "space-y-4" } do |f| %>
     <%= render "shared/errors", object: resource %>
 
-    <% resource.class.invite_key_fields.each do |field| %>
-      <div class="space-y-1">
-        <%= f.label field, class: "block text-sm font-medium" %>
-        <%= f.text_field field, class: "input w-full", autofocus: true %>
-      </div>
+    <% resource.class.invite_key_fields.each_with_index do |field, index| %>
+      <%= f.input field,
+                   input_html: {
+                     autofocus: index.zero?
+                   } %>
     <% end %>
 
     <div class="pt-2">
-      <%= f.submit t("devise.invitations.new.submit_button"), class: "btn btn-primary btn-block" %>
+      <%= f.button :submit, t("devise.invitations.new.submit_button"), class: "btn-primary btn-block" %>
     </div>
   <% end %>
 <% end %>
