--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,14 @@
 <%= modal close_on_submit: false, dialog_position: "modal-middle", title: t("search.index.title") do %>
   <div class="flex flex-col gap-4">
-    <%= form_with url: search_path, method: :get, data: { turbo_frame: :results, controller: "debounce" } do |form| %>
-      <%= form.search_field :query, autofocus: true, data: { action: "keydown.esc->dialog#close debounce#submit" }, class: "input w-full", placeholder: t("search.index.title") %>
+    <%= simple_form_for :search, url: search_path, method: :get, html: { data: { turbo_frame: :results, controller: "debounce" } } do |form| %>
+      <%= form.input :query,
+                      placeholder: t("search.index.title"),
+                      label: false,
+                      input_html: {
+                        type: "search",
+                        autofocus: true,
+                        data: { action: "keydown.esc->dialog#close debounce#submit" }
+                      } %>
     <% end %>
 
     <%= turbo_frame_tag :results do %>
