--- a/lib/templates/erb/scaffold/_form.html.erb.tt
+++ b/lib/templates/erb/scaffold/_form.html.erb.tt
@@ -1,27 +1,17 @@
-<%%= form_with(model: <%= model_resource_name %>, class: "contents space-y-4", data: { controller: "auto-submit", action: "keydown.ctrl+enter->auto-submit#submit keydown.meta+enter->auto-submit#submit" }) do |form| %>
+<%%= simple_form_for(<%= model_resource_name %>, html: { class: "contents space-y-4", data: { controller: "auto-submit", action: "keydown.ctrl+enter->auto-submit#submit keydown.meta+enter->auto-submit#submit" } }) do |form| %>
   <%%= render "shared/errors", object: form.object %>
 
 <% attributes.each do |attribute| -%>
-  <div>
 <% if attribute.password_digest? -%>
-    <%%= form.label :password, style: "display: block" %>
-    <%%= form.password_field :password %>
-  </div>
-
-  <div>
-    <%%= form.label :password_confirmation, style: "display: block" %>
-    <%%= form.password_field :password_confirmation %>
+  <%%= form.input :password %>
+  <%%= form.input :password_confirmation %>
 <% elsif attribute.attachments? -%>
-    <%%= form.label :<%= attribute.column_name %>, style: "display: block" %>
-    <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, multiple: true %>
+  <%%= form.input :<%= attribute.column_name %>, as: :file, input_html: { multiple: true } %>
 <% else -%>
-    <%%= form.label :<%= attribute.column_name %>, style: "display: block" %>
-    <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, class: "input w-full" %>
+  <%%= form.input :<%= attribute.column_name %> %>
 <% end -%>
-  </div>
-
 <% end -%>
   <div class="flex justify-end">
-    <%%= form.submit class: "btn btn-primary" %>
+    <%%= form.button :submit, class: "btn-primary" %>
   </div>
 <%% end %>
