--- a/app/views/organizations/projects/index.html.erb
+++ b/app/views/organizations/projects/index.html.erb
@@ -24,11 +24,17 @@
       <thead>
         <tr>
           <th><%= Project.human_attribute_name(:name) %></th>
-          <th><%= Project.human_attribute_name(:created_at) %></th>
-          <th><%= Project.human_attribute_name(:updated_at) %></th>
+          <th><%= Project.human_attribute_name(:status) %></th>
+          <th><%= Project.human_attribute_name(:priority) %></th>
+          <th><%= Project.human_attribute_name(:category) %></th>
+          <th><%= Project.human_attribute_name(:start_date) %></th>
+          <th><%= Project.human_attribute_name(:scheduled_at) %></th>
+          <th><%= Project.human_attribute_name(:budget) %></th>
+          <th><%= Project.human_attribute_name(:is_active) %></th>
           <th></th>
         </tr>
       </thead>
+
       <tbody id="projects">
         <% @projects.each do |project| %>
           <tr
@@ -40,12 +46,35 @@
             <td data-label="<%= Project.human_attribute_name(:name) %>">
               <%= project.name %>
             </td>
-            <td data-label="<%= Project.human_attribute_name(:created_at) %>">
-              <%= local_time(project.created_at, format: :short) %>
+
+            <td data-label="<%= Project.human_attribute_name(:status) %>">
+              <%= project.status&.humanize %>
             </td>
-            <td data-label="<%= Project.human_attribute_name(:updated_at) %>">
-              <%= local_time(project.updated_at, format: :short) %>
+
+            <td data-label="<%= Project.human_attribute_name(:priority) %>">
+              <%= project.priority&.humanize %>
             </td>
+
+            <td data-label="<%= Project.human_attribute_name(:category) %>">
+              <%= project.category %>
+            </td>
+
+            <td data-label="<%= Project.human_attribute_name(:start_date) %>">
+              <%= project.start_date ? local_time(project.start_date, format: :short) : "-" %>
+            </td>
+
+            <td data-label="<%= Project.human_attribute_name(:scheduled_at) %>">
+              <%= project.scheduled_at ? local_time(project.scheduled_at, format: :short) : "-" %>
+            </td>
+
+            <td data-label="<%= Project.human_attribute_name(:budget) %>">
+              <%= project.budget ? number_to_currency(project.budget) : "-" %>
+            </td>
+
+            <td data-label="<%= Project.human_attribute_name(:is_active) %>">
+              <%= project.is_active? ? "Yes" : "No" %>
+            </td>
+
             <td>
               <%= link_to t("shared.actions.show"), [@organization, project], class: "btn btn-sm btn-secondary" %>
             </td>
