fix search after adding simple_form

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,6 +4,7 @@
       <%= form.input :query,
                       placeholder: t("search.index.title"),
                       label: false,
+                      required: false,
                       input_html: {
                         type: "search",
                         autofocus: true,
