--- a/app/views/organizations/_table.html.erb
+++ b/app/views/organizations/_table.html.erb
@@ -10,6 +10,7 @@
           <th></th>
         </tr>
       </thead>
+
       <tbody id="organizations">
         <% organizations.each do |organization| %>
           <tr
@@ -21,9 +22,13 @@
             <td data-label="<%= Organization.human_attribute_name(:name) %>">
               <div class="flex items-center gap-2">
                 <%= organization_avatar(organization) %>
-                <span class="font-medium"><%= highlight(organization.name, params[:query]) %></span>
+
+                <span class="font-medium">
+                  <%= highlight(organization.name, params[:query]) %>
+                </span>
               </div>
             </td>
+
             <td
               data-label="<%= Organization.human_attribute_name(:privacy_setting) %>"
             >
@@ -31,14 +36,17 @@
                 <%= privacy_setting_options(organization.privacy_setting)[:display_text] %>
               </span>
             </td>
+
             <td data-label="Members">
               <%= render "organizations/users_list", organization: %>
             </td>
+
             <td
               data-label="<%= Organization.human_attribute_name(:created_at) %>"
             >
               <%= organization.created_at.strftime("%B %d, %Y") %>
             </td>
+
             <td>
               <%= render "organizations/membership_actions", organization: organization %>
             </td>
