--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -11,17 +11,7 @@
   data-dropdown-popover-placement-value="bottom top"
 >
   <button
-    class="
-      flex items-center justify-center gap-1.5 rounded-lg border
-      border-neutral-200 bg-white/90 p-2.5 text-xs font-medium
-      whitespace-nowrap text-neutral-800 shadow-xs transition-all
-      duration-100 ease-in-out select-none hover:bg-neutral-50
-      focus-visible:outline-2 focus-visible:outline-offset-2
-      focus-visible:outline-neutral-600 disabled:cursor-not-allowed
-      disabled:opacity-50 dark:border-neutral-700 dark:bg-neutral-800/50
-      dark:text-neutral-50 dark:hover:bg-neutral-700/50
-      dark:focus-visible:outline-neutral-200
-    "
+    class="btn btn-ghost btn-sm btn-circle"
     data-dropdown-popover-target="button"
     data-action="dropdown-popover#toggle"
   >
@@ -30,18 +20,17 @@
 
   <dialog
     class="
-      absolute z-10 w-max rounded-lg border border-neutral-200 bg-white
-      text-neutral-900 opacity-0 shadow-md transition-opacity duration-150
-      ease-out outline-hidden dark:border-neutral-700/50 dark:bg-neutral-800
-      dark:text-neutral-100 [&amp;[open]]:scale-100
+      absolute z-10 w-max opacity-0 transition-opacity duration-150
+      ease-out outline-hidden [&amp;[open]]:scale-100
       [&amp;[open]]:opacity-100 scale-100 opacity-100
     "
     data-dropdown-popover-target="menu"
     data-action="click@document->dropdown-popover#closeOnClickOutside"
     open
   >
-    <div class="flex flex-col p-1">
-      abc
-    </div>
+    <ul class="menu rounded-lg border border-base-300 bg-base-100 shadow-md p-1">
+      <li>abc</li>
+      <li>abc</li>
+    </ul>
   </dialog>
 </div>
