Add organization tabs to mobile navbar
Replaces sidebar links with organization tabs in the mobile navbar. Updates tab rendering to support SVG, image, and emoji icons. Adds helper methods for organization tabs and active tab detection. Improves tab styling and layout for better mobile usability.

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -98,12 +98,7 @@
 </nav>
 
 <% if Current.organization %>
-  <div
-    class="
-      menu menu-horizontal lg:hidden !mt-0 !pt-0 border-b
-      border-base-content/20 w-full
-    "
-  >
-    <%= render "shared/sidebar_links" %>
+  <div class="menu menu-horizontal lg:hidden !my-0 !py-0 w-full">
+    <%= render TabsComponent.new(active_tab: organization_active_tab, tabs: organization_tabs) %>
   </div>
 <% end %>
