floating label example

--- a/app/views/organizations/projects/_form.html.erb
+++ b/app/views/organizations/projects/_form.html.erb
@@ -8,6 +8,7 @@
   <%= form.input :name,
                  required: true,
                  label: "Project name",
+                 placeholder: "If there is a placeholder, the label is hidden by default",
                  hint: "Text input" %>
 
   <%= form.input :description,
