Improve tab and navbar UI responsiveness
Added responsive padding and custom scrollbar hiding to tabs component for better mobile experience. Updated navbar to conditionally show badge only when pending count is positive, set max height and scroll for dropdown, and simplified mobile tab rendering.

--- a/app/components/tabs_component.html.erb
+++ b/app/components/tabs_component.html.erb
@@ -1,4 +1,11 @@
-<div class="border-b border-base-content/20 w-full overflow-x-auto">
+<div
+  class="
+    max-lg:px-4
+    border-b border-base-content/20 w-full overflow-x-auto
+    [scrollbar-width:none] [-ms-overflow-style:none]
+    [&::-webkit-scrollbar]:hidden
+  "
+>
   <nav class="flex space-x-4">
     <% tabs.each do |tab| %>
       <% if tab[:condition].nil? || tab[:condition] %>
